# python-ki

./: .gitignore  .pre-commit-config.yaml  README.md  requirements-minimal.txt  setup.cfg
01_numpy/: 01_numpy.ipynb
01_numpy_pandas/: 01_numpy_ex.ipynb  01_numpy_pandas.ipynb
02_pandas/: 01_pandas.ipynb  01_pandas_ex.ipynb  02_pandas.ipynb
03_random_forest/: 03_random_forest.ipynb  03_random_forest_ex.ipynb
04_svm/: 04_svm.ipynb  04_svm_ex.ipynb
07_neural_nets/: 07_neural_nets.ipynb  07_neural_nets_ex.ipynb
08_ann/: 08_cnn.ipynb  08_ship_detection.ipynb
08_cnn/: 08_ship_detection.ipynb
09_cnn/: 09_00_cnn_nr_class.ipynb  09_01_cnn_nr_class_categorical.ipynb  09_03_cnn_ship_detection_model.ipynb  09_04_cnn_ship_search.ipynb
10_rnn/: 00_weatherforecast_lstm.ipynb  01_rnn_power_consumption.ipynb
data/: Global_Population.csv  Luftmessstationen-Messwerte_EPSG25832.csv  PowerConsumption_DE.csv  RUB_Weather.csv  Regression_Ruhr.csv  rgs_data.csv
